fixed a flickering qrcode on qr detail page load

--- a/wisehands/admin/css/admin.css
+++ b/wisehands/admin/css/admin.css
@@ -2439,9 +2439,11 @@ ul.admin-breadcrumb li a:hover {
 }
 
 .img-qr-code img {
-    width: 200px;
     height: auto;
-	margin: 5px;
+}
+
+.img-qr-code-print {
+    display: none;
 }
 
 .qr-input {
@@ -2826,10 +2828,6 @@ button[_ngcontent-addition-help] {
 	
 	.admin-card-qr {
         width: 175px;
-	}
-
-	.qr-list-container {
-	    justify-content: center;
 	}
 
 	.addition-help-text p {
